Fixed the width overflow issue and removed glow effect from mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,8 @@
     }
 }
 
-body {
+html, body {
+    width: 100%;
     overflow-x: hidden;
 }
 body.styledark {
@@ -308,7 +309,7 @@ body.styledark {
 }
 @media (max-width: 991px) {
     #index.styledark .init h1 {
-        text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+        color: white;
     }
 }
 #index #s1{
